Added Reset CSS
This helped with the overflowing issues in the Y axis.

and also initialized .gitignore

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+/* RESET CSS */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 /* styles.css */
+
 .header {
     display: flex;
     justify-content: space-between; 
