--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ button {
 
 /* Basic page styling */
 body {
-  background: url('./images/background1.jpg') center / cover no-repeat; /* Sets background image, centers it, and ensures it covers the entire page */
+  background: url('./images/potential-bg.png') center / cover no-repeat; /* Sets background image, centers it, and ensures it covers the entire page */
   height: 100vh; /* Sets the height to 100% of the viewport height */
   width: 100vw; /* Sets the width to 100% of the viewport width */
   font-family: 'Inconsolata', monospace; /* Sets a monospaced font for the body */
@@ -40,7 +40,7 @@ body {
 }
 
 .logo img {
-  max-width: 250px; /* Limits maximum width */
+  max-width: 180px; /* Limits maximum width */
   height: auto; /* Maintains aspect ratio */
 }
 
@@ -49,14 +49,14 @@ body {
 }
 
 .social-icons img {
-  width: 30px; /* Sets width */
-  height: 30px; /* Sets height */
-  margin-left: 10px; /* Adds left margin between icons */
+  width: 20px; /* Sets width */
+  height: 20px; /* Sets height */
+  margin-left: 7px; /* Adds left margin between icons */
 }
 
 /* Artist list styles */
 .artistlist {
-  max-width: 600px; /* Sets maximum width */
+  max-width: 550px; /* Sets maximum width */
   min-width: 400px; /* Sets minimum width */
   height: auto; /* Maintains aspect ratio */
   margin-right: 12%; /* Adds right margin */
@@ -98,7 +98,7 @@ body {
   ); /* Sets background color with transparency */
   text-align: justify; /* Justifies text */
   padding: 10px; /* Adds padding */
-  font-size: 26px; /* Sets font size */
+  font-size: 24px; /* Sets font size */
   font-weight: semi-bold; /* Sets font weight */
   font-family: Arial, Helvetica, sans-serif; /* Sets font family */
   display: inline-block; /* Ensures span elements behave like inline-block elements */
@@ -127,14 +127,83 @@ body {
 }
 
 .button-group button {
-  height: 250px; /* Sets button height */
-  width: 240px; /* Sets button width */
-  background: #6e6f71; /* Sets background color */
+  height: 300px; /* Sets button height */
+  width: 270px; /* Sets button width */
+  font-size: 24px; /* Sets font size */
+  font-style: italic; /* Italicizes text */
   color: #ffd19c; /* Sets text color */
-  border: 3px solid #343434; /* Sets border color and width */
+  outline: 5px solid rgba(52, 52, 52, 0.5); /* Sets outline color and width */
 }
 
-/* For Testing - Uncomment for border debugging */
+/* Sets background for each button with gradient overlay */
+.button-group button:nth-of-type(1) {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('./images/tickets.png') center/cover; /* Shorthand for background image, position, and size */
+}
+.button-group button:nth-of-type(2) {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('./images/experiences.png') center/cover; /* Shorthand for background image, position, and size */
+}
+.button-group button:nth-of-type(3) {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('./images/merch.png') center/cover; /* Shorthand for background image, position, and size */
+}
+
+/* Mobile social icons */
+.social-icons-mobile {
+  display: none; /* Hidden by default */
+  width: 80%; /* Sets width */
+  justify-content: center; /* Centers content */
+  margin: 0 auto; /* Centers element */
+  position: fixed; /* Fixes the element's position */
+  bottom: 0; /* Positions it at the bottom of the viewport */
+  left: 50%; /* Centers the element horizontally */
+  transform: translateX(-50%); /* Adjusts for the element's width */
+  margin-bottom: 40px; /* Adds bottom margin */
+  padding: 10px; /* Adds padding */
+  z-index: 1000; /* Ensures it stays on top of other elements */
+}
+
+.social-icons-mobile img {
+  width: 20px; /* Sets width */
+  height: 20px; /* Sets height */
+  margin-left: 15px; /* Adds left margin between icons */
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
+  .button-group {
+    flex-direction: column; /* Changes direction to column on smaller screens */
+    align-items: center; /* Centers buttons horizontally */
+    width: 80%; /* Adjusts width */
+  }
+
+  .button-group button {
+    height: 80px; /* Sets button height */
+    width: 100%; /* Sets button width */
+    outline: 2px solid rgba(52, 52, 52, 0.5); /* Sets outline color and width */
+    margin-bottom: 10px; /* Adds bottom margin */
+  }
+
+  .intro {
+    display: none; /* Hides intro section */
+  }
+
+  .imagebox img {
+    margin-right: 0px; /* Removes right margin */
+    padding: 7%; /* Adds padding */
+  }
+
+  .social-icons {
+    display: none; /* Hides desktop social icons */
+  }
+
+  .social-icons-mobile {
+    display: flex; /* Displays mobile social icons */
+  }
+}
+
+/* Uncomment for border debugging */
 /* .border {
   border: 1px solid blue;
 } */
