--- a/style.css
+++ b/style.css
@@ -49,3 +49,92 @@ body {
     display: flex;
     justify-content: flex-end;
 }
+.footer {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #33333398;
+  color: #fff;
+  font-size: 14px;
+}
+
+.footer-logo img {
+  max-width: 150px;
+  margin-right: 20px;
+}
+
+.footer-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-contact p {
+  margin: 5px 0;
+}
+
+.footer-social {
+  display: flex;
+  margin-top: 10px;
+}
+
+.footer-social img {
+  max-width: 24px;
+  margin-right: 10px;
+}
+
+.footer-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-links {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-links li {
+  margin: 5px 0;
+}
+
+.footer-links a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.footer-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.footer-form input {
+  padding: 8px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+}
+
+.footer-form button {
+  padding: 8px 16px;
+  background-color: hsl(0, 0%, 35%);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.footer-form button:hover {
+  background-color: #000000;
+}
